--- a/packages.config
+++ b/packages.config
@@ -1,12 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Albion.Network" version="5.0.1" targetFramework="net48" />
+  <package id="GameOverlay.Net" version="4.3.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="PacketDotNet" version="1.4.7" targetFramework="net48" />
   <package id="PhotonPackageParser" version="4.1.0" targetFramework="net48" />
   <package id="PrecisionTimer.NET" version="2.4.0.4" targetFramework="net48" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net48" />
   <package id="SharpPcap" version="6.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="9.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
